Knife project problem #47910

Closed
opened 2016-03-24 01:47:46 +01:00 by Marek Rys · 4 comments

System Information
Windows 7 64 pro, Nvidia GFX 660

Blender Version
Broken: all 2.77 since official until actual daily build
Worked: 2.74, 2.75, 2.76

Short description of error
Using Knife project gives less or more bad result. In previous version in most cases projected shape was very good "reprinted" on surface. In 2.77 is full of new edges - often it is total mess.

Exact steps for others to reproduce the error

  • select circle
  • with SHIFT select surface
  • go to edit mode
  • choose Knife Project from toolshelf

Aries_error.blend

knife_project_276_result.jpg

knife_project_277_result.jpg

**System Information** Windows 7 64 pro, Nvidia GFX 660 **Blender Version** Broken: all 2.77 since official until actual daily build Worked: 2.74, 2.75, 2.76 **Short description of error** Using Knife project gives less or more bad result. In previous version in most cases projected shape was very good "reprinted" on surface. In 2.77 is full of new edges - often it is total mess. **Exact steps for others to reproduce the error** - select circle - with SHIFT select surface - go to edit mode - choose Knife Project from toolshelf [Aries_error.blend](https://archive.blender.org/developer/F298148/Aries_error.blend) ![knife_project_276_result.jpg](https://archive.blender.org/developer/F298149/knife_project_276_result.jpg) ![knife_project_277_result.jpg](https://archive.blender.org/developer/F298150/knife_project_277_result.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Marek Rys self-assigned this 2016-03-24 01:47:46 +01:00
Author

Added subscriber: @mrys

Added subscriber: @mrys
Marek Rys removed their assignment 2016-03-24 01:48:49 +01:00

This issue was referenced by f209529c3d

This issue was referenced by f209529c3ddedf03199072c72dbcebfaa1ac52cc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47910
No description provided.