Fix T47910: Knife project fails

Regression in fix for T43896, using screen-space precision here is very problematic,
using lower precision here works for both reports.